--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ html {
   overflow: hidden;
 }
 
-h1 {
+.titleBar h1 {
   font-size: 3rem;
   text-shadow: 2px 2px 6px #000000;
 }
