--- a/src/lessons/LessonSelector.css
+++ b/src/lessons/LessonSelector.css
@@ -16,7 +16,16 @@ html {
     justify-content: space-evenly;
 }
 
-.titleBar {
+.lessonBackBtn {
+    position: absolute;
+    width: 52px;
+    aspect-ratio: 1;
+    top: 15px;
+    right: 15px;
+    background-image: url('../assets/back.svg');
+}
+
+.lessonTitle {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
